Fixed sorting algo bugs

--- a/webapp/views/home.html
+++ b/webapp/views/home.html
@@ -1,5 +1,11 @@
 <div class="container">
   <div class="row">
+    <div class="column">
+      <label>Nearby Events in Dubai</label>
+    </div>
+  </div>
+  <br>
+  <div class="row">
     <div class="column column-33" ng-repeat="e in events">
       <div class="demo-card-wide mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title" ng-style="{'background': getImage(e.image) }">
