--- a/webapp/assets/css/style.css
+++ b/webapp/assets/css/style.css
@@ -27,3 +27,50 @@ main {
   height: 500px; }
   #googleMaps ng-map {
     height: 500px; }
+
+tags-input {
+  margin-top: 10px; }
+
+tags-input input[type='text']:focus {
+  border: none !important; }
+
+tags-input .tags {
+  box-shadow: none; }
+
+tags-input .tags .tag-item {
+  background: #EC1943 !important;
+  color: #FFF;
+  padding-left: 15px; }
+
+tags-input .tags .tag-item .remove-button {
+  color: #FFF; }
+
+#timeToSpend {
+  height: 2.6rem;
+  border-radius: 1px;
+  border: 1px solid #a9a9a9; }
+
+#timeToSpend:focus {
+  outline: none;
+  -webkit-box-shadow: 0 0 3px 1px rgba(5, 139, 242, 0.6);
+  -moz-box-shadow: 0 0 3px 1px rgba(5, 139, 242, 0.6);
+  box-shadow: 0 0 3px 1px rgba(5, 139, 242, 0.6); }
+
+#make-my-day-btn {
+  margin-top: 25px;
+  background: #EC1943; }
+
+.marker {
+  height: 100px;
+  width: 100px;
+  margin-top: -20px;
+  background-size: cover !important; }
+
+.marker .text {
+  background: #FFF;
+  padding: 5px 10px;
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden; }
