--- a/webapp/assets/sass/style.scss
+++ b/webapp/assets/sass/style.scss
@@ -57,6 +57,7 @@ tags-input .tags .tag-item .remove-button {
 }
 
 #timeToSpend {
+  display: inline-block;
   height: 2.6rem;
   border-radius: 1px;
   border: 1px solid #a9a9a9;
