--- a/webapp/assets/css/style.css
+++ b/webapp/assets/css/style.css
@@ -9,7 +9,8 @@ main {
 
 .demo-card-wide.mdl-card {
   width: 100%;
-  height: 210px; }
+  height: 210px;
+  border-bottom: 1px solid #CCC; }
 
 .mdl-card__supporting-text {
   line-height: 20px; }
