--- a/webapp/assets/sass/style.scss
+++ b/webapp/assets/sass/style.scss
@@ -13,6 +13,7 @@ main {
 .demo-card-wide.mdl-card {
   width: 100%;
   height: 210px;
+  border-bottom: 1px solid #CCC;
 }
 .mdl-card__supporting-text {
   line-height: 20px;
