--- a/webapp/views/home.html
+++ b/webapp/views/home.html
@@ -5,28 +5,30 @@
     </div>
   </div>
   <br>
-  <div class="row">
-    <div class="column column-33" ng-repeat="e in events">
-      <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title" ng-style="{'background': getImage(e.image) }">
-          <h2 class="mdl-card__title-text">{{e.name}}</h2>
-        </div>
-        <!-- <div class="mdl-card__supporting-text">
-          {{e.description}}
-        </div> -->
-        <div class="mdl-card__actions mdl-card--border">
-          <div class="float-left">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              {{e.currency}} {{e.price}}
-            </a>
+  <div class="row slider">
+    <ul class="slides">
+      <li class="column column-33" ng-repeat="e in events">
+        <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__title" ng-style="{'background': getImage(e.image) }">
+            <h2 class="mdl-card__title-text">{{e.name}}</h2>
           </div>
-          <div class="float-right">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              Book
-            </a>
+          <!-- <div class="mdl-card__supporting-text">
+            {{e.description}}
+          </div> -->
+          <div class="mdl-card__actions mdl-card--border">
+            <div class="float-left">
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                {{e.currency}} {{e.price}}
+              </a>
+            </div>
+            <div class="float-right">
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                Book
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </div>
