--- a/webapp/views/make-my-day.html
+++ b/webapp/views/make-my-day.html
@@ -28,7 +28,7 @@
       <div class="column column-20">
         <fieldset>
             <label for="nameField"> Budget</label>
-              <input type="text" class="column column-33" placeholder="Budget" ng-model="budget" id="timeToSpend">
+              <input type="text" style="min-width: 200px !important;" class="column column-33" placeholder="Budget" ng-model="budget" id="timeToSpend">
         </fieldset>
       </div>
       <div class="column column-25">
