--- a/webapp/views/home.html
+++ b/webapp/views/home.html
@@ -8,7 +8,7 @@
   <div class="row slider">
     <ul class="slides">
       <li class="column column-33" ng-repeat="e in events">
-        <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+        <div class="demo-card-wide mdl-card mdl-shadow--2dp" ng-click="vm.lat=e.location[0]; vm.lng=e.location[1]; vm.name=e.name; vm.image=e.image">
           <div class="mdl-card__title" ng-style="{'background': getImage(e.image) }">
             <h2 class="mdl-card__title-text">{{e.name}}</h2>
           </div>
@@ -18,11 +18,11 @@
           <div class="mdl-card__actions mdl-card--border">
             <div class="float-left">
               <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                {{e.currency}} {{e.price}}
+                FROM {{e.currency}} {{e.price}}
               </a>
             </div>
             <div class="float-right">
-              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+              <a href="https://www.headout.com/tours/dubai?tags=family&categoryId=135" target="_blank" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 Book
               </a>
             </div>
@@ -30,5 +30,23 @@
         </div>
       </li>
     </ul>
+  </div>
+  <br>
+  <div class="row">
+    <div class="column">
+      <label>Locate in Map</label>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="column">
+      <ng-map center="25.2048493, 55.270782800000006" tilt="45" zoom="{{options.zoom}}" map-type-id="SATELLITE">
+        <custom-marker position="{{vm.lat}},{{vm.lng}}">
+          <div class="marker" ng-style="{'background': getImage(vm.image) }">
+            <div class="text"> {{vm.name}}</div>
+          </div>
+        </custom-marker>
+      </ng-map>
+    </div>
   </div>
 </div>
