Get traffic info from Google

--- a/webapp/views/make-my-day.html
+++ b/webapp/views/make-my-day.html
@@ -71,7 +71,7 @@
                     </a>
                   </div>
                   <div class="float-right">
-                    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    <a href="https://www.headout.com/tours/dubai?tags=family&categoryId=135" target="_blank" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                       Book
                     </a>
                   </div>
